# backuper

./: .dockerignore  .env.example  .flake8  .gitignore  .isort.cfg  Dockerfile  Makefile  README.md  black.toml  docker-compose.yaml  pyproject.toml
etc/app/: uwsgi.ini
etc/flower/: Dockerfile
project/backup/: enums.py  forms.py  matcher.py  models.py  tasks.py  urls.py  views.py
project/backup/admin/: __init__.py  backup.py  backup_client.py  backup_client_temp_state.py  service_for_backup.py
project/backup/managers/: __init__.py  abstract.py  base.py  db_dump.py  google_drive.py  local_container.py  mailru_cloud.py  yandex_disk.py
project/backup/migrations/: 0001_initial.py  0002_auto_20220529_1638.py  0003_auto_20220604_0839.py  0004_alter_backupclient_config.py  0005_auto_20220604_0856.py  0006_oauthtemporarystate.py  0007_auto_20220612_0800.py  0008_backupclient_status.py  0009_alter_backupclient_status.py  0010_alter_oauthtemporarystate_status.py  0011_alter_oauthtemporarystate_state.py  0012_auto_20220612_0929.py  0013_auto_20220723_1840.py  0014_remove_serviceforbackup_status_logs.py
project/core/: admin.py  models.py  signals.py
project/core/migrations/: 0001_initial.py  0002_alter_statuschangelog_initiator.py  0003_alter_fileobject_owner.py  0004_alter_statuschangelog_description.py
project/helpers/: admin.py  crypto.py  enums.py  models.py  utils.py  zip_archives.py
project/helpers/base_managers/: __init__.py  base.py  google_drive.py  local_container.py  pg_dumper.py  yandex_disk.py
project/project/: celery.py  settings.py  urls.py
(+12 files in other folders)
