[tool.poetry]
name = "backuper"
version = "0.1.0"
description = ""
authors = ["postman17 <frompostal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.2.13"
celery = "^5.2.6"
django-celery-beat = "^2.2.1"
psycopg2-binary = "^2.9.3"
redis = "^4.3.1"
uWSGI = "^2.0.20"
requests = "^2.27.1"
yadisk = "^1.2.15"
django-redis = "^5.2.0"
django-celery-results = "^2.3.1"
Jinja2 = "^3.1.2"
cryptography = "^37.0.4"
pyzipper = "^0.3.5"
google-api-python-client = "^2.53.0"
google-auth-oauthlib = "^0.5.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
ipython = "^8.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
